--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,16 +6,16 @@ header {
   flex-direction: row;
   justify-content: space-between;
   background-color: #305649;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
   top: 0;
 
   grid-area: head;
   
 }
 
-
 nav {
   background-color: #305649;
-
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -41,31 +41,36 @@ nav ul li a {
     
 }
   
-nav ul li a:hover {
-    background-color: lightgreen;
-    border-radius: 20px;
+/* nav ul li a:hover {
+    background-color: #16a085;
+    border-radius: 5px;
 }
-
+ */
 
 
 body {
     background-color:#305649;
+    background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
 
 h1 {
-
+ 
     color: #ffff;
     padding: 10px 30px 10px 30px;
     margin-left: 0px;
     background-color: #305649;
+    background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
 
 a:link {
-  text-decoration: none;
   color: white;
+  text-decoration: none;
+  
 }
+
+
 
 ul li a{
   color: white;
@@ -75,11 +80,12 @@ ul li a{
 
 footer {
   background-color: #305649;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 70%);
   padding: 30px;
   bottom: 0;
   position: sticky;
  /*  background-color:#305649; */
-  border: 1px solid #305649;
+
   grid-area: footer;
 
   
@@ -107,10 +113,13 @@ footer li {
   grid-area: home;
 }
 
+.logo:hover {
+  transform: translateX(500px);
+  transition: all 1s linear;
 
+}
 
 .productos {
-  background-color: #7fa89a;
   padding: 5px 5px 25px 5px;
   margin: 0px 5px 20px 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -118,7 +127,6 @@ footer li {
 }
 
 .productos h1{
-  color: white;
   display: flex;
   justify-content: center;
 
@@ -141,12 +149,15 @@ footer li {
 .container-producto-precio {
   flex-direction: column;
   justify-content: center;
-  border: 2px solid #305649 ;
   padding: 15px 15px 0px 15px;
   display: flex;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
+  background-image: linear-gradient( #16a085 0%, #57dbdb 70%);
+}
 
+.container-producto-precio:hover {
+  transform:scale(1.2);
+  transition: all 2s;
 }
 
 .container-img {
@@ -172,10 +183,9 @@ h4 {
 
 
 .proyectos {
-  background-color: #7fa89a;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding-bottom: 10px;
-  margin-bottom: 20px;
+  padding: 10px 10px 50px 20px;
+  margin-bottom: 300px;
   grid-area: projec;
 
 }
@@ -194,14 +204,17 @@ h4 {
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 200px;
   height: 200px;
-  
+} 
 
-  } 
+.proyectos img:hover {
+  transform: scale(1.1);
+  transition: all 1s;
+}
 
 .title_project {
   display: flex;
   justify-content: center;
-  background-color: #305649;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
   color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 10px;
@@ -212,7 +225,6 @@ h4 {
 }
 
 .asesoria {
-  background-color: #7fa89a;
   padding-bottom: 5px;
   margin: 0px 5px 20px 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -234,16 +246,21 @@ h4 {
   flex-direction: column;
   align-items: center;
   background-color: #7fa89a;
-  border: 2px solid #305649;
-  border-radius: 50px;
+  background-image: linear-gradient( #16a085 0%, #57dbdb 70%);
+  border-radius: 0px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: 10px 10px 10px 10px;
   padding: 2px 10px 2px 10px;
 }
 
+.container:hover {
+  transform: scale(1.1);
+  transition: all 1s;
+}
+
 .container h2 {
   font-size: 20px;
-  background-color: #305649;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
   color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 10px 50px 10px 50px;
@@ -251,7 +268,7 @@ h4 {
 }
 
 .sobre_nosotros {
-  background-color: #7fa89a;
+ 
   padding: 5px 5px 5px 5px;
   margin: 0px 5px 150px 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -268,7 +285,7 @@ h4 {
 /*     producto.html     */
 
 .productos-page {
-  background-color: #7fa89a;
+  
   padding: 5px 5px 25px 5px;
   margin: 0px 5px 20px 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -303,6 +320,11 @@ h6 {
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
+h6:hover {
+  transform: scale(1.3);
+  transition: all 0.5s;
+}
+
 /*     proyecto.html     */
 
 
@@ -322,7 +344,7 @@ h6 {
 
   display: flex;
   justify-content: center;
-  background-color: #305649;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
   color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: 20px 20px 20px 20px;
@@ -352,7 +374,7 @@ h6 {
 /*    contacto     */
 
 .contacto {
-  background-color: #7fa89a;
+  
   padding-bottom: 20px;
 }
 
@@ -373,7 +395,6 @@ li {
   
 }
 .texto_container  {
-  background-color: #7fa89a;
   padding: 20px;
   
 }
