--- a/css/estilos.css
+++ b/css/estilos.css
@@ -398,6 +398,12 @@ h6:hover {
 
 /*    contacto     */
 
+.container-contacto {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0px 0px 0px 20px;
+}
 .contacto {
   margin: 10px 0px 0px 0px;
   padding-bottom: 20px;
