--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,9 @@
 
 
 header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   background-color: #305649;
   background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
   top: 0;
@@ -9,6 +12,7 @@ header {
   grid-area: head;
   
 }
+
 
 form {
   width: 30vw;
@@ -27,15 +31,16 @@ form input {
 }
 
 nav {
-  font-size: 20px;
+  font-size: 12px;
   background-color: #305649;
   background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
-  grid-area: nav;
+ 
 }
 
  nav ul li a:hover {
-    background-color: #16a085;
-    border-radius: 5px;
+  background-image: linear-gradient( #16a085 0%, #57dbdb 70%);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 5px;
 }
 
 .navbar-light .navbar-toggler {
@@ -46,9 +51,18 @@ nav {
 
 .navbar-light .navbar-nav .nav-link {
   color: white;
+  display: flex;
+  flex-direction: row;
   
 }
 
+
+
+.formulario-buscador {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
 
 body {
     background-color:#305649;
@@ -56,7 +70,7 @@ body {
 }
 
 h1 {
- 
+    font-size: 20px;
     color: #ffff;
     padding: 10px 30px 10px 30px;
     margin-left: 0px;
@@ -66,12 +80,20 @@ h1 {
     
 }
 
-a:link {
+h1:hover {
+  transform: scale(0.9);
+  transition: all 1s;
+}
+
+a{
   color: white;
   text-decoration: none;
   
 }
 
+a:hover {
+color: white;
+}
 
 
 ul li a{
@@ -116,10 +138,10 @@ footer li {
 }
 
 .logo:hover {
-  transform: translateX(500px);
-  transition: all 1s linear;
-
+  transform: skew(5deg, 5deg);
+  transition: all 2s;
 }
+
 
 .productos {
   padding: 5px 5px 25px 5px;
@@ -152,6 +174,12 @@ footer li {
   border-style: none;  
 }
 
+.btn-ver-producto:hover{
+  transform: scale(0.8);
+  transition: all 0.5s;
+  
+}
+
 .productos img {
   border: 2px solid #ffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -180,8 +208,8 @@ footer li {
 } */
 
 .container-img {
-  width: 200px;
-  height: 200px;
+  width: 290px;
+  height: 195px;
 }
 
 
@@ -273,7 +301,26 @@ h4 {
   padding: 2px 10px 2px 10px;
 }
 
+.acordion-propio {
+  background-image: linear-gradient( #16a085 0%, #57dbdb 70%);
 
+}
+
+.estilo-btn-acordion {
+  color: white;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+  border-style: none;
+
+}
+
+.accordion-button:not(.collapsed) {
+  color: white;
+  text-transform: uppercase;
+}
+
+.estilo-parrafo-asesoria {
+  color: white;
+}
 
 .container h2 {
   font-size: 20px;
@@ -300,6 +347,8 @@ h4 {
 
 
 /*     producto.html     */
+
+
 
 .productos-page {
   
@@ -341,6 +390,18 @@ h4 {
   border-style: none;
   margin: 10px 0px 10px 0px;
   width: 120px;
+}
+
+.btn-comprar-producto:hover {
+  transform: scale(1.2);
+  transition: all 0.5s;
+  color: greenyellow;
+}
+
+.btn-agregar-producto:hover {
+  transform: scale(1.1);
+  transition: all 0.5s;
+  color: rgb(162, 0, 255);
 }
 
 h6 {
