--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,4 +1,6 @@
 @import "base/variables";
+@import "base/extend";
+@import "base/mixin.scss";
 @import "base/listas";
 @import "base/maps";
 @import "componentes/main";
