--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -1,9 +1,7 @@
 header {
     background-color: $bg-principal;
     background-image: $bg-img-gradient;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    @extend %orientacion;
     top: 0;
     grid-area: head;
 }
@@ -47,6 +45,7 @@ form {
 .navbar-light .navbar-toggler {
 color: $txt-principal;
 border-color: white;
+margin-left: 20px;
 
 }
 
@@ -56,7 +55,9 @@ display: flex;
 flex-direction: row;
 
 }    
-
+#navbarNav{
+    margin-left: 20px;
+}
 .formulario-buscador {
     display: flex;
     flex-direction: row;
@@ -71,9 +72,16 @@ body {
 h1 {
     font-size: nth($font-size , $n:1 );
     color: $txt-principal;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+h2 {
+    font-size: nth($font-size , $n:2 );
+    color: $txt-principal;
     padding: 10px 30px 10px 30px;
     margin-left: 0px;
-    background-color: $bg-principal;
     background-image: $bg-principal;
     box-shadow: $bx-shadow-principal;
     
