--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,7 +42,7 @@ nav ul li a:hover {
 
 .navbar-light .navbar-toggler {
   color: white;
-  border-color: white;
+  border-style: none;
   margin-left: 20px;
 }
 
@@ -63,8 +63,7 @@ nav ul li a:hover {
 }
 
 body {
-  background-color: #305649;
-  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+  background-color: #427765;
 }
 
 h1 {
@@ -210,6 +209,9 @@ h4 {
   transform: scale(1.1);
   transition: all 1s;
 }
+.proyectos p {
+  color: white;
+}
 
 .title_project {
   display: flex;
@@ -272,7 +274,7 @@ h4 {
   color: white;
 }
 
-.container h2 {
+h2 {
   font-size: 20px;
   background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
   color: white;
@@ -287,6 +289,7 @@ h4 {
   grid-area: abt;
 }
 .sobre_nosotros p {
+  color: white;
   grid-area: abtext;
 }
 
@@ -349,6 +352,157 @@ h6 {
 h6:hover {
   transform: scale(1.3);
   transition: all 0.5s;
+}
+
+/*     proyecto.html     */
+.proyectos h1 {
+  padding-top: 10px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  margin-left: 10px;
+}
+
+.project_title h3 {
+  display: flex;
+  justify-content: center;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+  color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 20px 20px 20px 20px;
+  padding: 20px;
+}
+
+.proyectos .des-img {
+  border-radius: 0px;
+  border-style: none;
+  width: 400px;
+  height: 600px;
+}
+
+.container-carousel-proyec {
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+}
+
+.container_deshidratador {
+  display: flex;
+}
+
+.asesoria-container h2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.ases-info {
+  padding-bottom: 700px;
+}
+.ases-info p {
+  color: white;
+  padding: 0px 20px 0px 20px;
+}
+
+.cultivo h3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  color: white;
+  padding-left: 5px;
+  font-size: 20px;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 10px 50px 10px 50px;
+}
+
+.construccion h3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: white;
+  padding-left: 5px;
+  font-size: 20px;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 10px 50px 10px 50px;
+}
+
+.consumo h3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  color: white;
+  padding-left: 5px;
+  font-size: 20px;
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 10px 50px 10px 50px;
+}
+
+/*    contacto     */
+.container-contacto {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0px 0px 0px 20px;
+}
+
+.contacto {
+  margin: 10px 0px 0px 0px;
+  padding-bottom: 20px;
+}
+.contacto h1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.contacto ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.contacto ul li {
+  list-style: none;
+  color: #305649;
+}
+
+.icono-style {
+  font-size: 100px;
+  color: white;
+}
+
+.linea-style {
+  color: white;
+}
+
+.estilo {
+  color: white;
+}
+
+.btn-enviar-formu {
+  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+  color: white;
+  border-style: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Sobre Nosotros */
+.sobre-nosotros {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0px 0px 0px;
+}
+.sobre-nosotros h2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.texto_container {
+  padding: 20px 10px 700px 10px;
+}
+.texto_container p {
+  color: white;
+  font-size: 20px;
 }
 
 /*# sourceMappingURL=estilos.css.map */
