--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -104,6 +104,10 @@ h4 {
                         transform: scale(1.1);
                         transition: all 1s;
                     }
+                   
+                }
+                p {
+                  color: $txt-principal;
                 }
  } 
 
@@ -171,7 +175,7 @@ h4 {
     color: $txt-principal;
   }
   
-.container h2 {
+h2 {
     font-size: nth($font-size , $n:2 );
     background-image: $bg-img-gradient;
     color: $txt-principal;
@@ -186,7 +190,8 @@ h4 {
     margin: 0px 5px 150px 5px;
     box-shadow: $bx-shadow-principal;
     grid-area: abt;
-                p{
+                p{  
+                    color: $txt-principal;
                     grid-area: abtext; 
                 }
   }
