--- a/scss/base/_colores.scss
+++ b/scss/base/_colores.scss
@@ -1,4 +1,15 @@
-$c-principal:#305649;
-$c-secundario: #7fa89a;
+$c-principal: #182933;
+$c-secundario: #15313F;
+$c-terciario: #1F4761;
+$c-cuaternario: #FFa300;
+$c-quinario: #FEC619;
+$c-sextario: #E29F5B;
+$c-septenario: white;
+$c-alternativo: #305649;
 $c-terciario-gradiente:  linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+
+
+
+
+
 
