--- a/scss/componentes/_asesoria.scss
+++ b/scss/componentes/_asesoria.scss
@@ -1,6 +1,7 @@
 /* Asesoria */
 
 .asesoria-container {
+                    margin: 10px 0px 0px 0px;
                     h2 {
                         display: flex;
                         flex-direction: row;
@@ -11,7 +12,7 @@
 .ases-info {
     padding-bottom: 700px;
            p {
-            color: $txt-principal;
+            color: $c-terciario;
             padding: 0px 20px 0px 20px;
            }
 }
@@ -24,7 +25,7 @@
             color: $txt-principal;
             padding-left: 5px;
             font-size: nth($font-size , $n:2 );
-            background-image: $bg-img-gradient;
+            background-color: $c-terciario;
             box-shadow:$bx-shadow-principal;
             padding: 10px 50px 10px 50px;
 
@@ -35,11 +36,11 @@
     h3 {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: flex-end;
         color: $txt-principal;
         padding-left: 5px;
         font-size: nth($font-size , $n:2 );
-        background-image: $bg-img-gradient;
+        background-color: $c-terciario;
         box-shadow:$bx-shadow-principal;
         padding: 10px 50px 10px 50px;
     }
@@ -49,11 +50,11 @@
     h3 {
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: flex-start;
         color: $txt-principal;
         padding-left: 5px;
         font-size: nth($font-size , $n:2 );
-        background-image: $bg-img-gradient;
+        background-color: $c-terciario;
         box-shadow:$bx-shadow-principal;
         padding: 10px 50px 10px 50px;
 
