--- a/scss/componentes/_productos.scss
+++ b/scss/componentes/_productos.scss
@@ -1,9 +1,15 @@
 /* Productos */
 
 .productos-page {
-  
-    padding: 5px 5px 25px 5px;
-    margin: 0px 5px 20px 5px;
+          h1{
+            margin: 10px 0px 0px 0px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+          }
+}
+.productos-page {
+    
     box-shadow: $bx-shadow-principal;
   
   }
@@ -30,25 +36,25 @@
   }
   
   .btn-comprar-producto {
-    background-image: $bg-img-gradient;
+    background-color: $c-sextario;
     border-style: none;
-    margin: 10px 0px 10px 0px;
+    margin: 0px 0px 0px 0px;
     width: 200px;
     &:hover {
         transform: scale(1.2);
         transition: all 0.5s;
-        color: greenyellow;
+        background-color: $c-cuaternario;
     }  
   }
   .btn-agregar-producto {
-    background-image: $bg-img-gradient;
+    background-color: $c-sextario;
     border-style: none;
     margin: 10px 0px 10px 0px;
     width: 120px;
     &:hover {  
         transform: scale(1.1);
-    transition: all 0.5s;
-    color: rgb(162, 0, 255);
+        transition: all 0.5s;
+        color:  $c-quinario;
 
     }
                    
