--- a/scss/componentes/_proyectos.scss
+++ b/scss/componentes/_proyectos.scss
@@ -1,12 +1,14 @@
 /*     proyecto.html     */
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .proyectos  {
             h1 {
-              padding-top: 10px;
-              padding-right: 30px;
-              padding-bottom: 10px;
-              padding-left: 20px;
-              margin-left: 10px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
             }
   
   }
@@ -17,9 +19,7 @@
                  h3 {
                   display: flex;
                   justify-content: center;
-                  background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
-                  color: white;
-                  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),  0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                  color: $c-terciario;
                   margin: 20px 20px 20px 20px;
                   padding: 20px ;
                  }
@@ -33,7 +33,7 @@
   }
   
   .container-carousel-proyec{
-    background-image: linear-gradient(-60deg, #16a085 0%, #2e4949 100%);
+    background-color: $c-quinario;
   }
   .container_deshidratador {
     display: flex;
