--- a/scss/componentes/_sobreNosotros.scss
+++ b/scss/componentes/_sobreNosotros.scss
@@ -16,7 +16,7 @@
 .texto_container  {
   padding: 20px 10px 700px 10px;
                   p {
-                    color: white;
+                    color: $c-terciario;
                     font-size: nth($font-size , $n:2 );
                     
                   }
